--- a/Waterpotability/static/css/style.css
+++ b/Waterpotability/static/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: url('/static/images/b2.jpg') no-repeat center center fixed;
+    background-color: #1d1d1fdd;
     background-size: cover;
 }
 
@@ -10,32 +10,33 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3 columns */
     gap: 15px; /* Reduced gap between boxes */
-    padding: 70px;
+    padding: 20px 350px;
     margin-bottom: 10px;
+    margin-top: 30px;
     justify-items: center; /* Center items horizontally in each column */
 }
 
 .attribute-box {
-    background-color: #28282B;
+    background-color: #28282B;;
     padding: 10px 10px; /* Adjusted padding inside each box */
     border: 1px solid #000000;
     border-radius: 8px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(176, 174, 174, 0.1); /* Box shadow */
     transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transition for hover effect */
-    width: 400px; /* Adjusted width of the box */
+    width: 320px; /* Adjusted width of the box */
     max-width: 100%; /* Allow boxes to be responsive */
 }
 
 .attribute-box:hover {
     transform: translateY(-5px); /* Move box up on hover */
-    box-shadow: 0 8px 16px rgba(246, 245, 245, 0.2); /* Increase shadow on hover */
+    box-shadow: 0 8px 16px rgba(246, 245, 245, 0.378); /* Increase shadow on hover */
 }
 
 .attribute-box img {
     padding-bottom: 2px;
-    width: 400px;
-    height: 110px;
+    width: 320px;
+    height: 100px;
 }
 
 .attribute-box h2 {
@@ -65,7 +66,7 @@ body {
 }
 
 .predict-button {
-    background-color: #09b30f;
+    background-color: #559b0f;
     color: white;
     padding: 15px 40px; /* Adjusted padding for height and width */
     border: 1px solid #000000;
@@ -83,6 +84,6 @@ body {
 }
 
 .predict-button:hover {
-    background-color: #0b5b0f;
+    background-color: #034709;
     transform: translateX(-50%) translateY(-3px);
 }
