--- a/Waterpotability/templates/waterpotability/result.html
+++ b/Waterpotability/templates/waterpotability/result.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/result.css' %}">
 </head>
 <body>
+    <div class="video-background">
+        <video autoplay loop muted>
+            <source src="{% static 'images/video.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
     <div class="container">
         <div class="result-box">
             <h1>Prediction Result</h1>
